# greenline

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build-daemon.sh  build-python-deps.sh  clickable.yaml  greenline-contenthub.json  greenline.apparmor  greenline.desktop.in  greenline.dispatcher  manifest.json.in  patch_tagme_kv.py  pushexec  pyproject.toml  snapcraft.yaml
.forgejo/workflows/: build-pull-request.yaml  release.yaml  sync-l10n.yaml  update-whatsmeow.yaml
.github/workflows/: build.yaml
daemon/: go.mod  go.sum  greenline.service  main.go  rpc.go  rpc_test.go  thumbnail.go
daemon/avatarsync/: avatarsync.go
daemon/configstore/: configstore.go
daemon/eventstore/: eventstore.go
daemon/notify/: notify.go
daemon/waconn/: msgsecret.go  waconn.go
plugin/audiocapture/: audiocapturerecorder.cpp  audiocapturerecorder.h  plugin.cpp
plugin/messagemodel/: messagelistmodel.cpp  messagelistmodel.h  plugin.cpp
po/: ca.po  de.po  en.po  es.po  fr.po  greenline.brennoflavio.pot  it.po  lo.po  nl.po  pt_BR.po  ta.po  uk.po
qml/: AuthorizationPage.qml  ChatListPage.qml  ChatPage.qml  ContactPreviewPage.qml  DaemonSetupPage.qml  DocumentPreviewPage.qml  ImagePreviewPage.qml  LoadingBar.qml  Main.qml  MessageReactionsPage.qml  PhonePairingPage.qml  ProfilePage.qml  SettingsPage.qml  StickerPickerPage.qml  VideoPreviewPage.qml
qml/AudioCapture/: qmldir
qml/MessageModel/: qmldir
qml/components/: ChatAttachmentDialog.qml  ChatAttachmentPickerPage.qml  ChatComposer.qml  ChatComposerMentionSuggestions.qml  ChatComposerReplyPreview.qml  ChatListItem.qml  ChatListSearchBar.qml  ChatMessageList.qml  ChatPageHeader.qml  ContactMessage.qml  ContentTransferPage.qml  DocumentMessage.qml  EditMessageDialog.qml  GenericPhoto.qml  ImageGalleryMessage.qml  ImageMessage.qml  LinkPreviewMessage.qml  LocationFetchDialog.qml  LocationMessage.qml  MessageBubble.qml  MessageReceiptIcon.qml  NewChatDialog.qml  RichTextMessage.qml  StickerMessage.qml  TextMessage.qml  VideoMessage.qml  VoiceMessage.qml  VoiceMessageRecorderDialog.qml
qml/lib/: ChatHelpers.js  MentionHelpers.js
src/: constants.py  daemon.py  daemon_types.py  events.py  greenline.service  history_sync.py  main.py  message_store.py  models.py  pending_outbox.py  push_helper.py  receipt_store.py  rpc.py  unread_counter.py  whatsmeow_types.py
src/greenline/: __init__.py  qml_events.py  qml_payloads.py  qml_text.py  reporting.py  session.py  storage_migrations.py  ui.py
src/greenline/api/: __init__.py  chats.py  common.py  daemon.py  messages.py
src/greenline/contracts/: __init__.py  codecs.py  daemon.py  kv.py  qml.py  validation.py
src/greenline/events/: __init__.py  chat_sync.py  handlers.py  session.py
src/greenline/push/: __init__.py  notifications.py
src/greenline/store/: __init__.py  identity.py  media.py  mentions.py  messages.py  reactions.py  records.py  repository.py
tests/: conftest.py  daemon_event_helpers.py  qml_contract_helpers.py  test_boundary_codecs.py  test_daemon_boundary.py  test_daemon_event_coverage.py  test_daemon_event_fixtures.py  test_daemon_event_ignored_unknown.py  test_daemon_event_kv_snapshots.py  test_daemon_event_loop.py  test_daemon_rpc_boundary.py  test_kv_boundary.py  test_kv_boundary_scanner.py  test_mention_spans.py  test_message_raw_boundary_scanner.py  test_message_type_mapping.py  test_push_notifications.py  test_qml_api_chat_contracts.py  test_qml_api_daemon_contracts.py  test_qml_api_message_contracts.py  test_qml_chat_serializer_consistency.py  test_qml_contract_coverage.py  test_qml_event_contracts.py  test_qml_message_batching.py  test_qml_message_serializer_consistency.py  test_qml_runtime_validation.py  test_qml_text.py  test_storage_migrations.py
tests/contracts/: README.md  qml_payloads.py  qml_registry.py
tests/cpp/: test_messagelistmodel.cpp
tests/fixtures/daemon_event_kv_snapshots/event/: avatar_sync.kv.json  business_name.kv.json  contact_full_name.kv.json  message.kv.json  mute_on.kv.json  picture_update.kv.json  push_name.kv.json  receipt_read.kv.json
tests/fixtures/daemon_event_kv_snapshots/history_sync/: conversation_livelocation.kv.json  conversation_location.kv.json  conversation_text.kv.json
tests/fixtures/daemon_event_kv_snapshots/message/: audio.kv.json  buttons_message.kv.json  contact.kv.json  conversation.kv.json  deleted.kv.json  document.kv.json  edit.kv.json  extended_text.kv.json  image.kv.json  link_preview.kv.json  livelocation.kv.json  location.kv.json  reaction_ignored.kv.json  sticker.kv.json  template_button_reply.kv.json  template_message.kv.json  unhandled_media_collection.kv.json  unhandled_media_contact_array.kv.json  unhandled_media_gif.kv.json  unhandled_media_livelocation.kv.json  unhandled_medianotify.kv.json  unhandled_poll.kv.json  unhandled_text.kv.json  video.kv.json  voice.kv.json
tests/fixtures/daemon_event_kv_snapshots/undecryptable_message/: view_once.kv.json
tests/fixtures/daemon_event_output_snapshots/event/: business_name.output.json  callreject.output.json  chatpresence.output.json  contact_full_name.output.json  message.output.json  mute_on.output.json  picture_update.output.json  presence_online.output.json  push_name.output.json  receipt_read.output.json
tests/fixtures/daemon_event_output_snapshots/history_sync/: conversation_livelocation.output.json  conversation_location.output.json  conversation_text.output.json
tests/fixtures/daemon_events/: README.md  manifest.json
tests/tools/: check_daemon_rpc_boundary.py  check_kv_boundary.py  check_message_raw_boundary.py  check_qml_contract_coverage.py  update_daemon_event_kv_snapshots.py
(+69 files in other folders)
