[project]
name = "greenline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "dacite>=1.9.2",
]

[tool.mypy]
files = ["src"]
exclude = ["ut_components"]

[[tool.mypy.overrides]]
module = "ut_components.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyotherside"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
